--- a/package.json
+++ b/package.json
@@ -12,6 +12,5 @@
     "nan": "^2.7.0"
   },
   "author": "Unity Technologies Inc.",
-  "license": "MIT",
-  "os" : [ "win32" ]
+  "license": "MIT"
 }
